Fixed nonce which overflows u64, used bind parameters in more places, added method to find the original creation method for a contract (and thus its bytecode) and swagger for that.
